src/test/resources/tests/typeError/incrementBool.qg

init {
    val = true
    val++
}

run true

input(a,b) true